--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2><a href="./public/movie-ranking.html">My top 3 Movies</a></h2>
     <img src="./assets/images/Movies.png" alt="PIcture of my top 3 movies">
     <h2><a href="./public/birthday-invite.html">It's My Birthday</a></h2>
-    <img src="/assets/images/birthday.png "
+    <img src="./assets/images/Birthday.png "
     alt="Birthday Cake"
     height="600">
     <hr>
